[project]
name = "via"
version = "2026.5.15"
description = "place your hand in theirs, and be led into the mist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "tombi>=0.11.4",
    "workers-py",
    "workers-runtime-sdk",
]
